metadata/force-app/main/default/objects/Deployment_Request__c/Deployment_Request__c.object-meta.xml
<CustomObject>
    <label>Deployment Request</label>
    <nameField>
        <displayFormat>DR-{0000000}</displayFormat>
        <label>Deployment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>