metadata/force-app/main/default/objects/Deployment_Request__c/fields/Deployment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Notes__c</fullName>
    <label>Deployment Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>