metadata/force-app/main/default/objects/Deployment_Request__c/fields/Destination_Connection__c.field-meta.xml
<CustomField>
    <fullName>Destination_Connection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination Connection</label>
    <referenceTo>PDRI__Connection__c</referenceTo>
    <relationshipLabel>Deployment Requests (Destination Connection)</relationshipLabel>
    <relationshipName>Deployment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>