metadata/force-app/main/default/objects/Deployment_Request__c/fields/Destination_Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Environment_Name__c</fullName>
    <formula>Destination_Environment__r.PDRI__Instance_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Environment Name</label>
    <type>Text</type>
</CustomField>