metadata/force-app/main/default/objects/Deployment_Request__c/fields/Destination_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org_Id__c</fullName>
    <formula>Destination_Environment__r.PDRI__Instance_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Org Id</label>
    <type>Text</type>
</CustomField>