metadata/force-app/main/default/objects/Deployment_Request__c/fields/Initiate_Deployment_After_Approval__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Deployment_After_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployment Approved</label>
    <type>Checkbox</type>
</CustomField>