metadata/force-app/main/default/objects/Deployment_Request__c/fields/Source_Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment_Name__c</fullName>
    <formula>Source_Environment__r.PDRI__Instance_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Environment Name</label>
    <type>Text</type>
</CustomField>