metadata/force-app/main/default/objects/Deployment_Request__c/fields/Source_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Org_Id__c</fullName>
    <formula>Source_Environment__r.PDRI__Instance_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Org Id</label>
    <type>Text</type>
</CustomField>