metadata/force-app/main/default/objects/Deployment_Request__c/validationRules/Only_Data_Set_OR_Deployment.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Data_Set_OR_Deployment</fullName>
    <active>true</active>
    <errorConditionFormula>Deployment_Plan__c != null &amp;&amp;  Data_Set__c != null</errorConditionFormula>
    <errorMessage>You must select either Deployment Plan or Data Set, not both!</errorMessage>
</ValidationRule>